--- a/client/src/components/TaskItem/TaskItem.css
+++ b/client/src/components/TaskItem/TaskItem.css
@@ -5,19 +5,29 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* background-color: rebeccapurple; */
 }
 
 .tarea {
   display: flex;
-  align-items: center;
+  align-items: start;
+  width: 350px;
   height: 50px;
-  font-size: 15px;
+  font-size: 20px;
   gap: 6px;
+  user-select: text;
+  justify-content: space-between;
+}
+
+.container-check-delete {
+  display: flex;
+  width: 50px;
+  justify-content: space-between;
 }
 
 .button-check {
   cursor: pointer;
+  user-select: none;
 }
 
 .button-check:hover {
@@ -27,6 +37,7 @@
 
 .button-delete {
   cursor: pointer;
+  user-select: none;
 }
 
 .button-delete:hover {
@@ -37,21 +48,21 @@
 /* ---------------BUTTON----------- */
 .button-subTarea {
   font-family: monospace;
-  font-size: 10px;
+  font-size: 11px;
   color: #FAFAFA;
   text-transform: uppercase;
   padding: 1px 5px;
-  border-radius: 10px;
-  border: 1px solid #FAFAFA;
+  border-radius: 5px;
+  /* border: 1px solid #FAFAFA; */
   background: #252525;
-  box-shadow: 1px 1px #fafafa;
+  /* box-shadow: 1px 1px #fafafa; */
   cursor: pointer;
-  margin: 9px 0;
+  margin: 7px 0;
 }
 
 .button-subTarea:active {
   box-shadow: none;
-  transform: translate(3px, 3px);
+  transform: translate(2px, 2px);
 }
 
 /* --------------------INPUT------------------ */
@@ -68,7 +79,7 @@
 
 .input-subTarea {
   color: #fff;
-  font-size: 0.7rem;
+  font-size: 10px;
   background-color: transparent;
   width: 60%;
   box-sizing: border-box;
