--- a/client/src/components/Tasks/tasks.css
+++ b/client/src/components/Tasks/tasks.css
@@ -6,11 +6,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  user-select: none;
 }
 
 .container {
   min-height: 350px;
   width: 600px;
+  min-height: 300px;
   display: flex;
   flex-direction: column;
   /* justify-content: center; */
@@ -19,7 +21,8 @@ body {
   /* border: 1px solid rgb(255, 255, 255); */
   border-radius: 25px;
   background-color: rgba(0, 0, 0, 0.24);
-  margin-top: 50px;
+  margin-top: 70px;
+  gap: 40px;
 }
 
 
