--- a/client/src/components/TaskItem/TaskItem.css
+++ b/client/src/components/TaskItem/TaskItem.css
@@ -1,22 +1,24 @@
 .container-principal-taskItem {
-  /* border: 1px solid rgb(252, 252, 252); */
-  width: 600px;
-  border-radius: 5px;
+  width: 515px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  /* background-color: rebeccapurple; */
+  border-bottom: 2px solid #ffffff;
+  margin-bottom: 30px;
 }
 
 .tarea {
   display: flex;
-  align-items: start;
-  width: 350px;
+  align-items: center;
+  width: 515px;
   height: 50px;
-  font-size: 20px;
-  gap: 6px;
+  font-size: 27px;
   user-select: text;
   justify-content: space-between;
+
+}
+
+.container-form-and-subTask {
+  width: 460px;
 }
 
 .container-check-delete {
@@ -31,7 +33,7 @@
 }
 
 .button-check:hover {
-  color: #6dce13;
+  color: #ce5813;
   transition: 200ms;
 }
 
@@ -41,21 +43,19 @@
 }
 
 .button-delete:hover {
-  color: #f33413;
+  color: #d81414;
   transition: 200ms;
 }
 
 /* ---------------BUTTON----------- */
 .button-subTarea {
   font-family: monospace;
-  font-size: 11px;
+  font-size: 15px;
   color: #FAFAFA;
   text-transform: uppercase;
-  padding: 1px 5px;
+  padding: 2px 7px;
   border-radius: 5px;
-  /* border: 1px solid #FAFAFA; */
   background: #252525;
-  /* box-shadow: 1px 1px #fafafa; */
   cursor: pointer;
   margin: 7px 0;
 }
@@ -67,7 +67,7 @@
 
 /* --------------------INPUT------------------ */
 .form-subTarea {
-  --width-of-input: 200px;
+  --width-of-input: 250px;
   --border-height: 1px;
   --border-before-color: rgba(221, 221, 221, 0.39);
   --border-after-color: #ffffff;
@@ -75,11 +75,13 @@
   position: relative;
   width: var(--width-of-input);
   display: flex;
+  margin-bottom: 20px;
 }
+
 
 .input-subTarea {
   color: #fff;
-  font-size: 10px;
+  font-size: 12px;
   background-color: transparent;
   width: 60%;
   box-sizing: border-box;
