--- a/client/src/components/Tasks/tasks.css
+++ b/client/src/components/Tasks/tasks.css
@@ -11,32 +11,46 @@ body {
 
 .container {
   min-height: 350px;
-  width: 600px;
+  width: 750px;
   min-height: 300px;
   display: flex;
   flex-direction: column;
   /* justify-content: center; */
   align-items: start;
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
   /* border: 1px solid rgb(255, 255, 255); */
-  border-radius: 25px;
+  /* border-radius: 25px; */
   background-color: rgba(0, 0, 0, 0.24);
   margin-top: 70px;
   gap: 40px;
+  border: 3px solid #ffffff;
 }
 
 
 
+
+
 .container-header {
-  margin-left: 20px;
+  margin-left: 30px;
+  /* background-color: red; */
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
+  align-items: center;
+
+}
+
+.container-tareas {
+  display: flex;
+  flex-direction: column;
+  /* gap: 20px; */
+  width: 750px;
   align-items: center;
 }
 
 /* --------------------INPUT------------------ */
 .form {
-  --width-of-input: 200px;
+  --width-of-input: 250px;
   --border-height: 1px;
   --border-before-color: rgba(221, 221, 221, 0.39);
   --border-after-color: #ce5813;
@@ -82,11 +96,11 @@ input:focus~.input-border {
   font-size: 20px;
   color: #FAFAFA;
   text-transform: uppercase;
-  padding: 2px 7px;
-  border-radius: 10px;
-  border: 1px solid #FAFAFA;
+  padding: 2px 8px;
+  border-radius: 5px;
+  /* border: 1px solid #FAFAFA; */
   background: #252525;
-  box-shadow: 2px 2px #fafafa;
+  box-shadow: 2px 2px #000000;
   cursor: pointer;
   margin: 5px 0;
 }
