--- a/client/src/components/Tasks/tasks.css
+++ b/client/src/components/Tasks/tasks.css
@@ -15,15 +15,11 @@ body {
   min-height: 300px;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: start;
-  /* background-color: #ffffff; */
-  /* border: 1px solid rgb(255, 255, 255); */
-  /* border-radius: 25px; */
-  background-color: rgba(0, 0, 0, 0.24);
+  background-color: #0000003d;
   margin-top: 70px;
   gap: 40px;
-  border: 3px solid #ffffff;
+  box-shadow: 0 1px 10px -2px rgba(255, 255, 255, 0.5);
 }
 
 
@@ -32,7 +28,6 @@ body {
 
 .container-header {
   margin-left: 30px;
-  /* background-color: red; */
   margin-top: 20px;
   display: flex;
   flex-direction: column;
@@ -43,7 +38,6 @@ body {
 .container-tareas {
   display: flex;
   flex-direction: column;
-  /* gap: 20px; */
   width: 750px;
   align-items: center;
 }
@@ -98,7 +92,6 @@ input:focus~.input-border {
   text-transform: uppercase;
   padding: 2px 8px;
   border-radius: 5px;
-  /* border: 1px solid #FAFAFA; */
   background: #252525;
   box-shadow: 2px 2px #000000;
   cursor: pointer;
