Css y fix bug login

--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -52,7 +52,7 @@
 }
 
 .custom-cancel-button {
-  background-color: #ce5813;
+  background-color: #ff6600;
   /* Rojo */
   color: white;
   border: none;
